# termite

./: AGENTS.md  Cargo.toml  package-lock.json
crates/azide/: Cargo.toml
crates/azide-app/: Cargo.toml
crates/azide-app/src/: app.rs  draw.rs  explore.rs  feed_store.rs  lib.rs  settings.rs  ui.rs
crates/azide-cli/: Cargo.toml
crates/azide-cli/src/: cli.rs  feed_store.rs  lib.rs
crates/azide-config/: Cargo.toml
crates/azide-config/src/: lib.rs
crates/azide-explore/: Cargo.toml  defaults.toml
crates/azide-explore/src/: lib.rs
crates/azide-feed/: Cargo.toml
crates/azide-feed/src/: lib.rs
crates/azide-gui/: Cargo.toml
crates/azide-gui/src/: app.rs  lib.rs  main.rs  model.rs
crates/azide-store/: Cargo.toml
crates/azide-store/src/: lib.rs
crates/azide/src/: main.rs
crates/jdiff/: Cargo.toml
crates/jdiff-app/: Cargo.toml
crates/jdiff-app/src/: app.rs  lib.rs  ui.rs
crates/jdiff/src/: main.rs
crates/jones-config/: Cargo.toml
crates/jones-config/src/: lib.rs
crates/jones-editor/src/: editor.rs
crates/jones-event/: Cargo.toml
crates/jones-event/src/: lib.rs
crates/jones-git-diff/: Cargo.toml
crates/jones-git-diff/src/: lib.rs
crates/jones-outline/: Cargo.toml
crates/jones-outline/src/: lib.rs
crates/jones-project-search/: Cargo.toml
crates/jones-project-search/src/: lib.rs
crates/jones-render/: Cargo.toml
crates/jones-render/src/: html.rs  markdown.rs
crates/jones-search/: Cargo.toml
crates/jones-search/src/: lib.rs
crates/jones-state/: Cargo.toml
crates/jones-state/src/: lib.rs
crates/jones-syntax/: Cargo.toml
crates/jones-syntax/src/: lib.rs
crates/jones-terminal/: Cargo.toml
crates/jones-terminal/src/: lib.rs
crates/jones-text/: Cargo.toml
crates/jones-text/src/: lib.rs
crates/jones-theme/: Cargo.toml
crates/jones-theme/src/: lib.rs
crates/jones-tui/: Cargo.toml
crates/jones-tui/src/: lib.rs
crates/jones-workspace/: Cargo.toml
crates/jones-workspace/src/: lib.rs
crates/jtop/: Cargo.toml
crates/jtop-app/: Cargo.toml
crates/jtop-app/src/: app.rs  input.rs  lib.rs  theme.rs  ui.rs
crates/jtop-core/: Cargo.toml
crates/jtop-core/src/: action.rs  battery.rs  discovery.rs  error.rs  lib.rs  powertop.rs  privilege.rs  runner.rs  tlp.rs  tlp_config.rs  usage.rs
crates/jtop-core/tests/: runner_integration.rs
crates/jtop-core/tests/fixtures/: powertop-report.csv  tlp-stat-c.txt  tlp-stat-s.txt
crates/jtop/src/: main.rs
crates/termex/: Cargo.toml
crates/termex-app/: Cargo.toml
crates/termex-app/src/: app.rs  lib.rs  ui.rs
crates/termex-config/: Cargo.toml
crates/termex-config/src/: lib.rs
crates/termex/src/: main.rs
crates/termite/: Cargo.toml
crates/termite-app/: Cargo.toml
crates/termite-app/src/: app.rs  draw.rs  lib.rs  ui.rs
crates/termite-config/: Cargo.toml
crates/termite-config/src/: lib.rs
crates/termite-editor/: Cargo.toml
crates/termite-editor/src/: editor.rs  lib.rs
crates/termite/src/: main.rs
crates/writerm-app/: Cargo.toml
crates/writerm-app/src/: app.rs  draw.rs  lib.rs  visual.rs
