[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["termite/.worktrees/*"]

[workspace.package]
edition = "2024"
authors = ["Geosmin Jones"]

[workspace.dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
color-eyre = "0.6"
tempfile = "3"
futures-lite = "2"
pulldown-cmark = "0.12"
