[workspace]
resolver = "3"
members = [
    "crates/jones-config",
    "crates/jones-editor",
    "crates/jones-event",
    "crates/jones-outline",
    "crates/jones-project-search",
    "crates/jones-render",
    "crates/jones-search",
    "crates/jones-state",
    "crates/jones-syntax",
    "crates/jones-terminal",
    "crates/jones-text",
    "crates/jones-theme",
    "crates/jones-tui",
    "crates/jones-workspace",
    "crates/termex",
    "crates/termex-app",
    "crates/termex-config",
    "crates/termite",
    "crates/termite-app",
    "crates/termite-config",
    "crates/termite-editor",
    "crates/writerm",
    "crates/writerm-app",
    "crates/writerm-config",
]
exclude = ["termite/.worktrees/*"]

[workspace.package]
name = "termite_suite"
version = "0.1.1"
edition = "2024"
authors = ["Geosmin Jones"]

[workspace.dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
color-eyre = "0.6"
tempfile = "3"
futures-lite = "2"
pulldown-cmark = "0.12"
