[package]
name = "azide-app"
version = "0.2.1"
edition = "2024"
description = "Azide app orchestration and TUI"
license = "AGPL-3.0"
authors = ["Geosmin Jones"]

[dependencies]
azide-explore = { path = "../azide-explore" }
azide-config = { path = "../azide-config" }
azide-feed = { path = "../azide-feed" }
azide-store = { path = "../azide-store" }
jones-event = { path = "../jones-event" }
jones-render = { path = "../jones-render" }
jones-search = { path = "../jones-search" }
jones-state = { path = "../jones-state" }
jones-terminal = { path = "../jones-terminal" }
jones-theme = { path = "../jones-theme" }
jones-tui = { path = "../jones-tui" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
color-eyre.workspace = true
chrono = "0.4"
open = "5"
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
