[package]
name = "azide-cli"
version = "0.2.1"
edition = "2024"
description = "Azide command-line interface"
license = "AGPL-3.0"
authors = ["Geosmin Jones"]

[dependencies]
azide-config = { path = "../azide-config" }
azide-feed = { path = "../azide-feed" }
azide-store = { path = "../azide-store" }
jones-render = { path = "../jones-render" }
clap = { version = "4", features = ["derive"] }
color-eyre.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
