[package]
name = "azide-gui"
version = "0.1.0"
edition = "2024"
description = "Alternative egui desktop interface for Azide"
license = "AGPL-3.0"
authors = ["Geosmin Jones"]

[[bin]]
name = "azide-gui"
path = "src/main.rs"

[dependencies]
azide-config = { path = "../azide-config" }
azide-explore = { path = "../azide-explore" }
azide-feed = { path = "../azide-feed" }
azide-store = { path = "../azide-store" }
jones-render = { path = "../jones-render" }
chrono = "0.4"
color-eyre.workspace = true
eframe = { version = "0.28.1", default-features = false, features = ["accesskit", "default_fonts", "glow", "wayland", "x11"] }
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
