[package]
name = "azide-store"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["Geosmin Jones"]

[dependencies]
azide-config = { path = "../azide-config" }
color-eyre.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile.workspace = true
