[package]
name = "azide"
version = "0.2.1"
edition = "2024"
description = "An RSS feed reader TUI"
license = "AGPL-3.0"
authors = ["Geosmin Jones"]

[[bin]]
name = "azide"
path = "src/main.rs"

[dependencies]
azide-app = { path = "../azide-app" }
azide-cli = { path = "../azide-cli" }
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
color-eyre.workspace = true
