[package]
name = "jdiff-app"
version = "0.1.0"
edition = "2024"
description = "Jdiff app orchestration and TUI"
license = "AGPL-3.0"
authors = ["Geosmin Jones"]

[dependencies]
jones-event = { path = "../jones-event" }
jones-git-diff = { path = "../jones-git-diff" }
jones-state = { path = "../jones-state" }
jones-terminal = { path = "../jones-terminal" }
jones-theme = { path = "../jones-theme" }
jones-tui = { path = "../jones-tui" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
color-eyre.workspace = true
