[package]
name = "jdiff"
version = "0.1.0"
edition = "2024"
description = "Terminal git diff viewer for Jones Suite"
license = "AGPL-3.0"
authors = ["Geosmin Jones"]

[[bin]]
name = "jdiff"
path = "src/main.rs"

[dependencies]
jdiff-app = { path = "../jdiff-app" }
tokio.workspace = true
color-eyre.workspace = true
